начала верстать header

--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booksay</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booksay</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-      <div class="topnav">
+  <header>
+    <div class="topnav">
+
       <div class="logotip">
-        <p class="text">BOOKSAY</p>
+        <p class="logo_text">Booksay</p>
       </div>
+
     </div>
-    </header>
-    <main>
-      <p> main</p>
-    </main>
-    <footer>
-      <p>footer</p>
-      <nav>
-        <ul> 
+  </header>
+  <main>
+    <p> main</p>
+  </main>
+  <footer>
+    <p>footer</p>
+    <nav>
+      <ul>
         <li>Художественная литература</li>
         <li>Комиксы</li>
         <li>Филология</li>
@@ -30,8 +37,9 @@
         <li>Психология</li>
         <li>Философия</li>
         <li>Книги для подростков</li>
-       </ul>
-      </nav>
-    </footer>
+      </ul>
+    </nav>
+  </footer>
 </body>
+
 </html>
