добавила блок и поиск

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       </div>
 
     </div>
+   
+    <div class="block">
+      <div class="blockdop"></div>
+      <div class="search"> поиск
+      </div>  
+    
+    
   </header>
   <main>
     <p> main</p>
