--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 <body>
   <header>
     <div class="topnav">
-
+      <a href="#catalog">Каталог</a>
+      <a href="#comment">Отзывы</a>
+      <a href="#contact">Контакты</a>
       <div class="logotip">
         <p class="logo_text">Booksay</p>
       </div>
-      <ul>
-        <li> Каталог</li>
-        <li>Отзывы</li>
-        <li>Контакты</li>
-      </ul>
+      
 
     </div>
 
@@ -78,7 +76,7 @@
           <button class="card__add">Обменять</button>
         </div>
       </div>
-    </div>
+    
 
     <div class="card">
       <div class="card__bottom">
@@ -90,7 +88,7 @@
         </div>
         <div class="card__top">
           <a href="#" class="card__image">
-            <img src="" alt="book" />
+            <img src="img/Rectangle 5 (1).png" alt="book" />
           </a>
         </div>
 
@@ -100,6 +98,7 @@
 
         <button class="card__add">Обменять</button>
       </div>
+    </div>
     </div>
     </div>
   </main>
