--- a/index.html
+++ b/index.html
@@ -142,121 +142,123 @@
           <button class="card__add">Обменять</button>
         </div>
       </div>
+
+
+
+      <div class="card">
+        <div class="card__bottom">
+          <div class="card__prices">
+            <button class="card__price card__exchange">
+              <a href="#" class="price__image">
+                <img src="img/Star 1 (1).png" alt="star" />
+            </button>
+          </div>
+          <div class="card__top">
+            <a href="#" class="card__image">
+              <img src="img/Rectangle 8.png" alt="book" />
+            </a>
+          </div>
+
+          <a href="#" class="card__title">
+            Дарители. Екатерина Соболь. Короли будущего.
+          </a>
+
+          <button class="card__add">Обменять</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__bottom">
+          <div class="card__prices">
+            <button class="card__price card__exchange">
+              <a href="#" class="price__image">
+                <img src="img/Star 1 (1).png" alt="star" />
+            </button>
+          </div>
+          <div class="card__top">
+            <a href="#" class="card__image">
+              <img src="img/Rectangle 9.png" alt="book" />
+            </a>
+          </div>
+
+          <a href="#" class="card__title">
+            Трилунье. На тропе луны.
+          </a>
+
+          <button class="card__add">Обменять</button>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="card__bottom">
+          <div class="card__prices">
+            <button class="card__price card__exchange">
+              <a href="#" class="price__image">
+                <img src="img/Star 1 (1).png" alt="star" />
+            </button>
+          </div>
+          <div class="card__top">
+            <a href="#" class="card__image">
+              <img src="img/Rectangle 11 (3).png" alt="book" />
+            </a>
+          </div>
+
+          <a href="#" class="card__title">
+            Ученик ведьмака. Я - Грималкин. Джозеф Дилейни.
+          </a>
+
+          <button class="card__add">Обменять</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__bottom">
+          <div class="card__prices">
+            <button class="card__price card__exchange">
+              <a href="#" class="price__image">
+                <img src="img/Star 1 (1).png" alt="star" />
+            </button>
+          </div>
+          <div class="card__top">
+            <a href="#" class="card__image">
+              <img src="img/Rectangle 12 (1).png" alt="book" />
+            </a>
+          </div>
+
+          <a href="#" class="card__title">
+            Последняя чародейка. Джулия Пайк.
+          </a>
+
+          <button class="card__add">Обменять</button>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__bottom">
+          <div class="card__prices">
+            <button class="card__price card__exchange">
+              <a href="#" class="price__image">
+                <img src="img/Star 1 (1).png" alt="star" />
+            </button>
+          </div>
+          <div class="card__top">
+            <a href="#" class="card__image">
+              <img src="img/Rectangle 13.png" alt="book" />
+            </a>
+          </div>
+
+          <a href="#" class="card__title">
+            Возвращение призрака. Бет Мак-Маллен.
+          </a>
+
+          <button class="card__add">Обменять</button>
+        </div>
+      </div>
+
+
     </div>
-
-    <div class="sorting">
-      <div class="card">
-        <div class="card__bottom">
-          <div class="card__prices">
-            <button class="card__price card__exchange">
-              <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
-            </button>
-          </div>
-          <div class="card__top">
-            <a href="#" class="card__image">
-              <img src="img/Rectangle 3.png" alt="book" />
-            </a>
-          </div>
-
-          <a href="#" class="card__title">
-            Гарри Потер. Джоан Кэтлин Роулинг. Филосовский камень.
-          </a>
-
-          <button class="card__add">Обменять</button>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__bottom">
-          <div class="card__prices">
-            <button class="card__price card__exchange">
-              <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
-            </button>
-          </div>
-          <div class="card__top">
-            <a href="#" class="card__image">
-              <img src="img/Rectangle 4.png" alt="book" />
-            </a>
-          </div>
-
-          <a href="#" class="card__title">
-            Тайная тропа. Шарон Крич.
-          </a>
-
-          <button class="card__add">Обменять</button>
-        </div>
-      </div>
-
-
-      <div class="card">
-        <div class="card__bottom">
-          <div class="card__prices">
-            <button class="card__price card__exchange">
-              <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
-            </button>
-          </div>
-          <div class="card__top">
-            <a href="#" class="card__image">
-              <img src="img/Rectangle 5 (1).png" alt="book" />
-            </a>
-          </div>
-
-          <a href="#" class="card__title">
-            Ученик ведьмака. Меня зовут Алиса. Джозеф Дилейни.
-          </a>
-
-          <button class="card__add">Обменять</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__bottom">
-          <div class="card__prices">
-            <button class="card__price card__exchange">
-              <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
-            </button>
-          </div>
-          <div class="card__top">
-            <a href="#" class="card__image">
-              <img src="img/Rectangle 6.png" alt="book" />
-            </a>
-          </div>
-
-          <a href="#" class="card__title">
-            Питомник. Полина Дашкова.
-          </a>
-
-          <button class="card__add">Обменять</button>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__bottom">
-          <div class="card__prices">
-            <button class="card__price card__exchange">
-              <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
-            </button>
-          </div>
-          <div class="card__top">
-            <a href="#" class="card__image">
-              <img src="img/Rectangle 7.png" alt="book" />
-            </a>
-          </div>
-
-          <a href="#" class="card__title">
-            Нина. Муни Витчер.
-          </a>
-
-          <button class="card__add">Обменять</button>
-        </div>
-      </div>
-
-     
-    </div>
+    <div class="comment"></div>
   </main>
+
   <footer>
     <p>footer</p>
     <nav>
