Чуть чуть подправил верстку
Сделал логотип в левом верхнем углу ссылкой на главную страницу,
подредактировал кнопки навигации (при наведении эффект ховер срабатывал не на всю высоту родительского элемента).

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <a href="#comment">Отзывы</a>
       <a href="#contact">Контакты</a>
       <div class="logotip">
-        <p class="logo_text">Booksay</p>
+        <a href="index.html">
+          <p class="logo_text">Booksay</p>
+        </a>
       </div>
 
 
