--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
           <a href="#" class="card__title">
             Нина. Муни Витчер.
+            
           </a>
 
           <button class="card__add">Обменять</button>
@@ -258,7 +259,18 @@
 
 
     </div>
-    <div class="comment"></div>
+    <div class="comment">
+      <p id="discussion">Отзывы</p>
+      <a href="#" class="comment_image">
+        <img src="img/image 1.png" alt="book" />
+      </a>
+      <a href="#" class="next_image">
+        <img src="img/Next page.png" alt="next" />
+      </a>
+      <a href="#" class="next_right">
+        <img src="img/Next page (1).png" alt="next" />
+      </a>
+    </div>
   </main>
 
   <footer>
