Внес парочку изменений
1.Добавил картинку в баннер
2.Переименовал звездочки
3.Сделал реализацию .procedure с помощью сетки (Grid), старый вариант остался нетронутым, но закомментирован чуть ниже.
4.Подредактировал верстку карточки, теперь карточки выглядят идентично.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div class="block">
       <div class="blockdop"></div>
       <div class="search">
+        <!--<img src="img/find.png" alt="Лупа" width="30" height="30">-->
         <input type="text" title="поиск" placeholder="Поиск">
       </div>
       <div class="banner"></div>
@@ -41,7 +42,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -62,7 +63,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -85,7 +86,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -107,7 +108,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -128,7 +129,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -152,7 +153,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -173,7 +174,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -196,7 +197,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -218,7 +219,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
@@ -239,7 +240,7 @@
           <div class="card__prices">
             <button class="card__price card__exchange">
               <a href="#" class="price__image">
-                <img src="img/Star 1 (1).png" alt="star" />
+                <img src="img/star_outline.png" alt="star" />
             </button>
           </div>
           <div class="card__top">
