--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
           <a href="#" class="card__title">
             Нина. Муни Витчер.
-            
+
           </a>
 
           <button class="card__add">Обменять</button>
@@ -264,12 +264,17 @@
       <a href="#" class="comment_image">
         <img src="img/image 1.png" alt="book" />
       </a>
-      <a href="#" class="next_image">
-        <img src="img/Next page.png" alt="next" />
-      </a>
-      <a href="#" class="next_right">
-        <img src="img/Next page (1).png" alt="next" />
-      </a>
+      <div class="type_comment">
+      <input type="text" title="поиск" placeholder="Оставить комментарий">
+      </div>
+    <button class="comment_add">Оставить отзыв</button>
+    <a href="#" class="next_image">
+      <img src="img/Next page.png" alt="next" />
+    </a>
+    <a href="#" class="next_right">
+      <img src="img/Next page (1).png" alt="next" />
+    </a>
+
     </div>
   </main>
 
