--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 
           <a href="#" class="card__title">
             Возвращение призрака. Бет Мак-Маллен.
+
           </a>
 
           <button class="card__add">Обменять</button>
@@ -261,19 +262,23 @@
     </div>
     <div class="comment">
       <p id="discussion">Отзывы</p>
+      <p id="commment_book">Малюсенькая, но очень хорошая книжечка. Думала: абы какие слова Пушкина встречу на страничках, а здесь мудрым замечательным инкогнито так всё ...
+      </p>
       <a href="#" class="comment_image">
         <img src="img/image 1.png" alt="book" />
+      </a>
+      <a href="#" class="next_right">
+        <img src="img/Next page (1).png" alt="next" />
+      </a>
+      <a href="#" class="next_left">
+        <img src="img/Next page.png" alt="next" />
       </a>
       <div class="type_comment">
       <input type="text" title="поиск" placeholder="Оставить комментарий">
       </div>
     <button class="comment_add">Оставить отзыв</button>
-    <a href="#" class="next_image">
-      <img src="img/Next page.png" alt="next" />
-    </a>
-    <a href="#" class="next_right">
-      <img src="img/Next page (1).png" alt="next" />
-    </a>
+   
+   
 
     </div>
   </main>
